--- a/package.json
+++ b/package.json
@@ -6,15 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "docx": "^8.5.0",
+    "export-from-json": "^1.7.4",
+    "file-saver": "^2.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
+    "mongoose": "^8.5.4",
+    "next": "^14.2.14",
+    "nodemailer": "^6.9.14",
+    "ownreactapp": "file:",
+    "pdf-lib": "^1.17.1",
+    "qr-scanner": "^1.4.2",
+    "qrcode": "^1.5.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-qr-code": "^2.0.15",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "trace": "^3.1.1",
+    "web-vitals": "^4.2.3"
   },
   "devDependencies": {
+    "@types/node": "22.5.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/react-dom": "^18.3.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.4"
   }
 }
